[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Lil_Death_Sprite.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Misc/light.png" type="Texture" id=3]




[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 6 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, -11 )
shape = SubResource( 1 )

[node name="LeftRayCast2D" type="RayCast2D" parent="."]
position = Vector2( -3, -3 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 5 )

[node name="LeftRayCast2D2" type="RayCast2D" parent="."]
position = Vector2( -2, -15 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 5 )

[node name="RightRayCast2D" type="RayCast2D" parent="."]
position = Vector2( 1, -15 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 5 )

[node name="RightRayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 0, -3 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 2.0

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -2.5, -7 )
scale = Vector2( 0.137695, 0.152344 )
texture = ExtResource( 3 )
texture_scale = 2.0
shadow_enabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, -13 )
frames = SubResource( 6 )
frame = 3
playing = true
